--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Trabalhator concatenates a lot of differnt stuff to generate a remote Keyboard and mouse usint USB-OTG
+Trabalhator concatenates a lot of differnt stuff to generate a remote Keyboard and mouse using USB-OTG
 
 TODO:
 
