--- a/README
+++ b/README
@@ -4,8 +4,29 @@ TODO:
 
 armbian-config
 
+cp /boot/dtb/sun8i-h3-orangepi-plus.dtb /boot/dtb/sun8i-h3-orangepi-plus.dtb.old
+
 dtc -I dtb /boot/dtb/sun8i-h3-orangepi-plus.dtb -O dts -o /boot/dtb/sun8i-h3-orangepi-plus.dts
 
+CTRL + W usb
+
+From 
+ 		usb@1c19000 {
+                        compatible = "allwinner,sun8i-h3-musb";
+                        reg = < 0x1c19000 0x400 >;
+                        clocks = < 0x03 0x20 >;
+                        resets = < 0x03 0x11 >;
+                        interrupts = < 0x00 0x47 0x04 >;
+                        interrupt-names = "mc";
+                        phys = < 0x10 0x00 >;
+                        phy-names = "usb";
+                        extcon = < 0x10 0x00 >;
+                        dr_mode = "disabled";
+                        status = "okay";
+                        phandle = < 0x4e >;
+                };
+
+TO
                 usb@1c19000 {
                         compatible = "allwinner,sun8i-h3-musb";
                         reg = < 0x1c19000 0x400 >;
